--- a/AngularApp1/angularapp1.client/src/app/navigation/navigation.component.html
+++ b/AngularApp1/angularapp1.client/src/app/navigation/navigation.component.html
@@ -23,12 +23,16 @@
         <tr>
             <td><a class="menu" href="/register/">Register</a></td>
         </tr>
-        <tr>
+        <!-- <tr>
             <app-authenticator></app-authenticator>
-        </tr>
+        </tr> -->
     </table>
-    <h1 id="tableLabel">Prawo jazdy kategoria B</h1>
-    <h1><a href="/learning/1">Rozpocznij nauke</a></h1>
+    <img src="logo.png" />
+    <h1>Termoinf</h1>
+    <h1 id="tableLabel"><b>Świadectwo charakterystyki energetycznej</b></h1>
+    <h1>mieszkań, domów jednorodzinnych.</h1>
+    <a class="btn btn-primary" href="">Zamów</a>
+    <!-- <h1><a href="/learning/1">Rozpocznij nauke</a></h1> -->
 </div>
 <hr>
 
